Display permissions on user,users pages

--- a/public/views/queue.build.html
+++ b/public/views/queue.build.html
@@ -6,7 +6,7 @@
         <a href="{{ repoStatusUrl }}">{{ repoName }}</a>
     </td>
     <td>
-        <span class="status-icon--{{ buildStatusStyle }}" data-build="{{ buildId }}">{{  buildStatus }}</span>
+        <span class="{{ buildStatusStyle }}" data-build="{{ buildId }}">{{  buildStatus }}</span>
     </td>
     <td>{{ environmentName }}</td>
     <td>
