--- a/templates/_partial/macros.twig
+++ b/templates/_partial/macros.twig
@@ -88,46 +88,29 @@
 {% macro status(msg, type, icon) %}
     {% import _self as self_macros %}
 
-    {% set icon = icon|default('spam-2') %}
+    {% set icon = icon|default('') %}
     {% set typeClass = 'status-block--info' %}
 
-    {% if type == 'success' %}
-        {% set typeClass = 'status-block--success' %}
-
-    {% elseif type == 'error' %}
-        {% set typeClass = 'status-block--error' %}
-
+    {% if type in ['info', 'success', 'error', 'notice', 'warning'] %}
+        {% set typeClass = 'status-block--' ~ type %}
     {% endif %}
 
-    <span class="{{ typeClass }}">
-        {{ self_macros.icon(icon) }}{{ msg }}
-    </span>
+    {% if icon %}
+        <span class="{{ typeClass }}">{{ icon ? self_macros.icon(icon) : '' }} {{ msg }}</span>
+    {% else %}
+        <span class="{{ typeClass }}">{{ msg }}</span>
+    {% endif %}
 
 {% endmacro %}
 
 {# Status Icon - icon prefix for a message #}
 {% macro status_icon(contents, type, extra_attributes) %}
-    {% set type = type|default('other') %}
+    {% set type = type|default('warning') %}
     {% set extra = extra_attributes|default({}) %}
-    {% set typeClass = 'status-icon--other' %}
+    {% set typeClass = 'status-icon--info' %}
 
-    {% if type == 'unknown' %}
-        {% set typeClass = 'status-icon--unknown' %}
-
-    {% elseif type == 'success' %}
-        {% set typeClass = 'status-icon--success' %}
-
-    {% elseif type == 'error' %}
-        {% set typeClass = 'status-icon--error' %}
-
-    {% elseif type == 'other' %}
-        {% set typeClass = 'status-icon--other' %}
-
-    {% elseif type == 'warning' %}
-        {% set typeClass = 'status-icon--warning' %}
-
-    {% elseif type == 'thinking' %}
-        {% set typeClass = 'status-icon--thinking' %}
+    {% if type in ['info', 'success', 'error', 'notice', 'warning', 'thinking'] %}
+        {% set typeClass = 'status-icon--' ~ type %}
     {% endif %}
 
     <span class="{{ typeClass }}"{% for attr, val in extra %} {{ attr }}="{{ val }}"{% endfor %}>{{ contents|raw }}</span>
