--- a/sass/patterns/_list.scss
+++ b/sass/patterns/_list.scss
@@ -24,13 +24,24 @@
     display: inline;
 }
 
+
 .inline-list--comma > li::after {
     content: ", ";
 }
-
-.inline-list--comma > li:last-child::after {
+.inline-list--comma > li:last-child::after
+{
     content: "";
 }
+
+.inline-list--space > li::after {
+    margin-right: .25em;
+    content: "";
+}
+.inline-list--space > li:last-child::after {
+    margin-right: 0;
+    content: "";
+}
+
 
 // Stat list
 .stat-list {
