--- a/sass/patterns/_status.scss
+++ b/sass/patterns/_status.scss
@@ -1,9 +1,11 @@
 
 // Status blocks
 .status-block,
-.status-block--success,
 .status-block--info,
-.status-block--error, {
+.status-block--success,
+.status-block--error,
+.status-block--notice,
+.status-block--warning {
     color: $white;
     font-size: 75%;
     line-height: ms(6);
@@ -11,17 +13,11 @@
     white-space: nowrap;
 }
 
-.status-block--success {
-    background-color: $success-color;
-}
-
-.status-block--info {
-    background-color: $grey;
-}
-
-.status-block--error {
-    background-color: $error-color;
-}
+.status-block--info { background-color: $grey; }
+.status-block--success { background-color: $success-color; }
+.status-block--error { background-color: $error-color; }
+.status-block--notice { background-color: $blue; }
+.status-block--warning { background-color: $warning-color; }
 
 // Status icons
 @mixin status {
@@ -39,34 +35,22 @@
     }
 }
 
-.status-icon--unknown,
+.status-icon--info,
 .status-icon--success,
 .status-icon--error,
-.status-icon--other,
-.status-icon--thinking,
-.status-icon--warning {
+.status-icon--notice,
+.status-icon--warning,
+.status-icon--thinking {
     &:before {
         @include status;
     }
 }
 
-.status-icon--unknown {
-    @include status-bg($grey);
-}
-
-.status-icon--success {
-    @include status-bg($success-color);
-}
-
-.status-icon--error {
-    @include status-bg($error-color);
-}
-
-.status-icon--warning,
-.status-icon--other {
-    @include status-bg($warning-color);
-}
-
+.status-icon--info { @include status-bg($grey); }
+.status-icon--success { @include status-bg($success-color); }
+.status-icon--error { @include status-bg($error-color); }
+.status-icon--notice { @include status-bg($blue); }
+.status-icon--warning { @include status-bg($warning-color); }
 .status-icon--thinking {
     transform: translateZ(0);
     &:before {
