--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -4,60 +4,58 @@
 {% set page_title = "Admin Dashboard" %}
 
 {% block content %}
-    <h2>Admin Dashboard</h2>
+    <h1>Admin Dashboard</h1>
 
-    <div>
-        <section class="dash-box">
+    <h2>Manage Deployments</h2>
+    <ul class="button-list">
+        <li>
+            <a href="{{ urlFor('repositories') }}" class="btn">
+                {{ macros.icon('list') }} Applications
+            </a>
+        </li>
+        <li>
+            <a href="{{ urlFor('servers') }}" class="btn">
+                {{ macros.icon('server') }} Servers
+            </a>
+        </li>
+        <li>
+            <a href="{{ urlFor('environments') }}" class="btn">
+                {{ macros.icon('leaf') }} Environments
+            </a>
+        </li>
+        <li>
+            <a href="{{ urlFor('admin.queue.page1') }}" class="btn">
+                {{ macros.icon('in') }} Queue History
+            </a>
+        </li>
+    </ul>
 
-            <h3>Manage Deployments</h3>
-            <ul class="list--bare">
-                <li>
-                    <a href="{{ urlFor('repositories') }}" class="btn">
-                        {{ macros.icon('list') }} Repositories
-                    </a>
-                </li>
-                <li>
-                    <a href="{{ urlFor('servers') }}" class="btn">
-                        {{ macros.icon('server') }} Servers
-                    </a>
-                </li>
-                <li>
-                    <a href="{{ urlFor('environments') }}" class="btn">
-                        {{ macros.icon('leaf') }} Environments
-                    </a>
-                </li>
-                <li>
-                    <a href="{{ urlFor('admin.queue.page1') }}" class="btn">
-                        {{ macros.icon('in') }} Queue History
-                    </a>
-                </li>
-            </ul>
-        </section>
 
-        <section class="dash-box">
+    <h2>Security and Permissions</h2>
+    <ul class="button-list">
+        <li>
+            <a href="{{ urlFor('users') }}" class="btn btn--primary">
+                {{ macros.icon('users') }} Users
+            </a>
+        </li>
+        <li>
+            <a href="{{ urlFor('admin.permissions') }}" class="btn btn--primary">
+                {{ macros.icon('safe') }} Permissions
+            </a>
+        </li>
+        <li>
+            <a href="{{ urlFor('admin.audit.logs.page1') }}" class="btn btn--primary">
+                {{ macros.icon('watch') }} Audit Logs
+            </a>
+        </li>
 
-            <h3>Security and Permissions</h3>
-            <ul class="list--bare">
-                <li>
-                    <a href="{{ urlFor('users') }}" class="btn btn--primary">
-                        {{ macros.icon('users') }} Users
-                    </a>
-                </li>
-                <li>
-                    <a href="{{ urlFor('admin.audit.logs.page1') }}" class="btn btn--primary">
-                        {{ macros.icon('watch') }} Audit Logs
-                    </a>
-                </li>
-
-                {% if isUserSuperAdmin(currentUser) %}
-                    <li>
-                        <a href="{{ urlFor('admin.super') }}" class="btn btn--destructive">
-                            {{ macros.icon('dashboard') }} Super Admin Dashboard
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-        </section>
-    </div>
+        {% if isUserSuperAdmin(currentUser) %}
+            <li>
+                <a href="{{ urlFor('admin.super') }}" class="btn btn--destructive">
+                    {{ macros.icon('dashboard') }} Super Admin Dashboard
+                </a>
+            </li>
+        {% endif %}
+    </ul>
 
 {% endblock %}
